--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,16 @@
+html, body{
+    background-color: #F3F3F7 !important;
+}
+
 /* Navbar */
 
 .navbar{
     background-color: #3B3B3B;
-    height: 80px !important;
+    /* height: 80px !important; */
+    padding: 15px 0px !important;
 }
 .navbar-brand{
-    margin-left: 30px !important;
+    margin-left: 50px !important;
 }
 .nav-link {
     color: white;
@@ -20,3 +25,107 @@
     text-decoration: none;
     color: white;
 }
+.navbar-toggler{
+    color: white !important;
+    outline: none !important;
+    margin-right: 20px !important;
+    font-size: 25px !important;
+}
+
+@media (max-width: 520px){
+    .navbar-brand{
+        margin-left: 17px !important;
+    }
+    .nav-link {
+        margin-left: 20px !important;
+    }
+}
+@media (max-width: 991px){
+    .nav-link {
+        margin-top: 5px;
+        margin-left: 60px;
+    }
+    .navbar-nav{
+        margin-top: 15px;
+    }
+}
+
+
+
+/* Left Content */
+
+.reservation, .privateOffice, .events, .subscription{
+    font-family: 'Poppins', sans-serif;
+    margin-top: 50px !important;
+    margin-left: 20%;
+    background-color: white;
+    padding: 30px 40px;
+    width: 180px;
+    border-radius: 10px;
+    
+
+}
+
+.privateOffice{
+    height: 165px;
+}
+
+.events{
+    height: 150px;
+}
+
+#content p {
+    color: #707070;
+}
+
+.subscription img {
+    margin-left: 12px !important;
+    margin-top: 10px;
+    margin-bottom: 12px;
+}
+
+.reservation img {
+    margin-left: 15px !important;
+    margin-top: 10px;
+    margin-bottom: 12px;
+}
+
+.privateOffice img {
+    margin-left: 16px !important;
+    margin-bottom: 12px;
+}
+
+.events img {
+    margin-left: 25px !important;
+    margin-top: 10px;
+    margin-bottom: 12px;
+}
+
+.events p {
+    margin-left: 20px !important;
+ 
+}
+
+#leftSide div .image {
+    /*  -webkit-filter: brightness(0) invert(1);   // white color for svg  */
+    
+}
+
+@media (max-width: 1310px){
+    .reservation, .privateOffice, .events, .subscription{
+
+        margin-left: 10%;
+    }
+
+}
+
+
+/* Right Content */
+
+.rightContent{
+    margin-top: 50px !important;
+    background-color: white;
+   
+    border-radius: 10px;
+}
+
