--- a/css/index.css
+++ b/css/index.css
@@ -152,3 +152,30 @@ html, body{
    
     border-radius: 10px;
 }
+
+/* footer */
+
+#footer{
+    margin-top: 38px !important;
+    color: white;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+}
+.footer p {
+    margin-top: 18px;
+}
+
+.pull-right a i {
+    margin-right: 15px;
+    color: white;
+
+}
+
+#footer p i {
+    transition: 0.4s;
+    cursor: pointer;
+}
+#footer p i:hover {
+    transform: scale(1.3);
+
+}
