--- a/css/index.css
+++ b/css/index.css
@@ -171,6 +171,10 @@ html, body{
 
 }
 
+.pull-right {
+    margin-right: 3%;
+}
+
 #footer p i {
     transition: 0.4s;
     cursor: pointer;
@@ -178,4 +182,7 @@ html, body{
 #footer p i:hover {
     transform: scale(1.3);
 
+}
+.pull-left {
+    margin-left: 3%;
 }
