--- a/css/index.css
+++ b/css/index.css
@@ -66,13 +66,6 @@ html, body{
 
 }
 
-.privateOffice{
-    height: 165px;
-}
-
-.events{
-    height: 150px;
-}
 
 #content p {
     color: #707070;
@@ -94,6 +87,11 @@ html, body{
     margin-left: 16px !important;
     margin-bottom: 12px;
 }
+.privateOffice p {
+    margin-left: -3px !important;
+  
+}
+
 
 .events img {
     margin-left: 25px !important;
@@ -111,9 +109,9 @@ html, body{
     
 }
 
-@media (max-width: 1310px){
+@media (max-width: 1340px){
     .reservation, .privateOffice, .events, .subscription{
-        margin-left: 10% !important;
+        margin-left: 12% !important;
     }
 
 }
@@ -121,15 +119,19 @@ html, body{
 @media (max-width: 1588px){
     .reservation, .privateOffice, .events, .subscription{
         margin-left: 20%;
+        min-width: 165px;
+
     }
 
 }
 
-@media (max-width: 1180px){
+@media (max-width: 1198px){
     .reservation, .privateOffice, .events, .subscription{
-        padding: 30px 30px;
-        width: 160px;
-        margin-left: 8% !important;
+        padding: 30px 35px;
+        margin-left: 5% !important;
+    }
+    .elements{
+        margin-left: 5% !important;
     }
 
 }
@@ -137,11 +139,29 @@ html, body{
 @media (max-width: 1028px){
     .reservation, .privateOffice, .events, .subscription{
         padding: 30px 30px;
-        width: 160px;
-        margin-left: 3% !important;
+        width: 155px !important;
+    }
+    .elements{
+        margin-left: 1% !important;
+    }
+}
+
+@media(max-width: 991px){
+    .reservation, .privateOffice, .events, .subscription{
+        height: 140px;
+        padding: 15px 32px;
+        margin-left: 4% !important;
+    
+    }
+    .elements{
+       justify-content: center;
+        margin-left: 0% !important;
+        margin-right: 2% !important;
     }
 
 }
+
+
 
 
 /* Right Content */
