--- a/css/index.css
+++ b/css/index.css
@@ -50,9 +50,57 @@ html, body{
     }
 }
 
+/* footer */
 
+#footer{
+    margin-top: 38px !important;
+    color: white;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+}
+.footer p {
+    margin-top: 18px;
+}
 
-/* Left Content */
+.pull-right a i {
+    margin-right: 15px;
+    color: white;
+
+}
+
+.pull-right {
+    margin-right: 3%;
+}
+
+#footer p i {
+    transition: 0.4s;
+    cursor: pointer;
+}
+#footer p i:hover {
+    transform: scale(1.3);
+
+}
+.pull-left {
+    margin-left: 3%;
+}
+
+/* Active Page CSS */
+
+.activePage {
+    background-color: #E3B038 !important;
+}
+
+.activePage img, .activePage p{
+    -webkit-filter: brightness(0) invert(1) !important;  
+    -moz-filter : brightness(0) invert(1) !important;  
+    -o-filter : brightness(0) invert(1) !important;  
+    -ms-filter : brightness(0) invert(1) !important;  
+    filter : brightness(0) invert(1) !important;  
+    font-weight: bold;
+    color: white !important;
+}
+
+/* Left Content CSS Fix */
 
 .reservation, .privateOffice, .events, .subscription{
     font-family: 'Poppins', sans-serif;
@@ -64,7 +112,6 @@ html, body{
     border-radius: 10px;
     
 }
-
 
 .reservation:hover, .privateOffice:hover, .events:hover, .subscription:hover {
     transform: scale(1.1);
@@ -107,14 +154,6 @@ html, body{
 .events p {
     margin-left: 20px !important;
  
-}
-.activePage {
-    background-color: #E3B038 !important;
-}
-
-.activePage img, .activePage p{
-    -webkit-filter: brightness(0) invert(1);  
-    font-weight: bold;
 }
 
 
@@ -170,19 +209,14 @@ html, body{
 
 }
 
+/* Privet Office : Right Content */
 
-
-
-/* Right Content */
-
+/* 
 .rightContent{
     margin-top: 50px !important;
     background-color: white;
-   
     border-radius: 10px;
 }
-
-/* Privet Office */
 
 .imgPrivetOffice {
     max-width: 370px;
@@ -370,39 +404,226 @@ html, body{
 
 .carousel-indicators .active {
     background: #E3B038;
+} */
+
+
+/* Events : Right Content */
+
+.eventDate {
+    color: #FC9700;
+    font-weight: bold;
+    margin-bottom: 3px;
 }
 
+ .rightContent{
+    margin-top: 50px !important;
+    background-color: white;
+    border-radius: 10px;
+}
 
-/* footer */
+.imgEvents {
+    max-width: 370px;
+    border-radius: 30px;
+    margin-top: 80px !important;
+}
 
-#footer{
-    margin-top: 38px !important;
-    color: white;
-    font-size: 16px;
+.txtEvent {
+    padding-top: 90px;
+    
+}
+
+@media(max-width: 1440px){
+    .txtEvent h1{
+            font-size: 20px !important;        
+    }
+}
+
+.txtEvent h1{
     font-family: 'Poppins', sans-serif;
+    color: #202124;
+    font-size: 26px;
 }
-.footer p {
-    margin-top: 18px;
+ .txtEvent p, .txtEvent a {
+    font-family:  'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 500;
+
 }
 
-.pull-right a i {
-    margin-right: 15px;
+.txtEvent p {
+    color: #A6ADB4;
+    font-size: 19px;
+}
+
+.txtEvent h1,  .txtEvent a {
+    font-weight: bold;
+}
+
+
+.btnBookNow a{
+    background-color: #222831;
     color: white;
-
-}
-
-.pull-right {
-    margin-right: 3%;
-}
-
-#footer p i {
-    transition: 0.4s;
+    padding: 10px 40px;
     cursor: pointer;
+    border-radius: 20px;
+    font-size: 20px;
+   
 }
-#footer p i:hover {
-    transform: scale(1.3);
+
+.btnBookNow {
+    margin-top: 7px !important;
+}
+
+.btnPrivetOffice {
+    text-align: right;
+   
+}
+.btnBookNow a:hover {
+    color: white;
+    text-decoration: none !important;
+}
+
+.privet1{
+    margin-top: 10px;
+}
+.privet2 {
+    margin-bottom: 30px !important;
+    margin-top: 11px;
+}
+
+@media(max-width: 1580px){
+    .imgEvents {
+        max-width: 320px;
+        margin-top: 90px !important;
+    }
+}
+
+@media(max-width: 1300px){
+
+    .imgEvents {
+        max-width: 290px;
+        margin-top: 90px !important;
+    }
+    .txtEvent p {
+        font-size: 17px;
+    }
+    .btnBookNow a{
+        padding: 8px 35px;
+        font-size: 19px;
+    }
+}
+
+@media(max-width: 1170px){
+
+    .imgOffice{
+        margin-right: 5% !important;
+    }
+
+    .imgEvents {
+        max-width: 250px;
+        margin-top: 110px !important;
+    }
+
+    .privet2 {
+        margin-top: 11px;
+    margin-bottom: 10px !important;
+    }
+
+ 
 
 }
-.pull-left {
-    margin-left: 3%;
+
+
+@media(max-width: 1060px){
+
+    .blog .carousel-indicators {
+        bottom: -50px !important;
+    }
+
+    .privet1{
+        margin-top: 10px;
+    }
+    .privet2 {
+        margin-bottom: 30px !important;
+        margin-top: -30px;
+    }
+}
+
+@media(max-width: 991px){
+
+    .blog .carousel-indicators {
+        bottom: -15px !important;
+    }
+
+    .imgOffice{
+        text-align: center;
+        margin-top: -80px;
+        margin-right: 0% !important;
+    }
+
+    .imgEvents {
+        max-width: 350px;
+    }
+
+    .txtEvent {
+        text-align: center;
+        margin-top: -50px;
+    }
+
+    .btnPrivetOffice {
+        text-align: center;
+        margin-bottom: 30px;
+    }
+
+    .btnBookNow {
+        margin-bottom: 30px !important;
+    }
+
+}
+
+
+@media(max-width: 450px){
+
+    .imgEvents {
+        max-width: 250px;
+    }
+}
+
+.blog .carousel-indicators {
+   
+    bottom: -80px;
+    margin-bottom: 30px !important;
+
+}
+
+.blog .carousel-indicators li {
+    margin-top: 200px !important;
+    display: inline-block;
+    width: 15px;
+    background-color: rgba(0, 0, 0, 0);
+    height: 15px;
+    text-indent: -999px;
+    border: 1px solid #E3B038;
+    border-radius: 10px;
+}
+
+.blog .carousel-indicators .active {
+    background: #E3B038;
+}
+
+
+.carousel-indicators li {
+    margin-top: 2%;
+    display: inline-block;
+    width: 12px;
+    background-color: rgba(0, 0, 0, 0);
+    height: 12px;
+    text-indent: -999px;
+    border: 1px solid #E3B038;
+    border-radius: 10px;
+
+    margin-top: -7%;
+}
+
+.carousel-indicators .active {
+    background: #E3B038;
 }
