--- a/css/index.css
+++ b/css/index.css
@@ -775,7 +775,7 @@ select option{
 
 }
 
-@media(max-width: 1018px){
+@media(max-width: 1030px){
 
     .card-body button {
         padding: 10px 20px;
@@ -787,4 +787,28 @@ select option{
     .card-body button {
         padding: 10px 25px;
     }
+
+    .subscriptionCards {
+        margin-top: 10px;
+    }
+
+    .filterSubscription {
+        margin-top: 10px;
+    }
+}
+@media(max-width: 848px){
+
+    
+.card {
+    width: 300px !important;
+ }
+
+}
+
+
+@media(max-width:635px){
+
+    .card {
+        width: 320px !important;
+     }
 }
