--- a/css/eventContent.css
+++ b/css/eventContent.css
@@ -219,6 +219,9 @@ select option{
     .filterEvents {
        
         margin-bottom: 0px;
+       margin-left: 9px;
+        text-align: center !important;
+        justify-content: center !important;
        
     }
     
