--- a/css/subscriptionConfirm.css
+++ b/css/subscriptionConfirm.css
@@ -44,6 +44,7 @@ select option{
     box-shadow: 0 20px 20px rgba(0,0,0,.05);
     font-family: 'Poppins', sans-serif;
     border-radius: 28px !important;
+    padding-top: 30px !important;
  }
 
  .card:nth-of-type(2){
@@ -235,6 +236,11 @@ select option{
  
     }
 
+    .card:nth-of-type(1) {
+      
+        padding-top: 50px !important;
+     }
+
 }
 
 @media(max-width: 1018px){
@@ -268,18 +274,22 @@ select option{
     
 .card:nth-of-type(1) {
     width: 400px !important;
+    padding-top: 15px !important;
+    padding-bottom: 25px !important;
  }
 
  .card:nth-of-type(2){
     width: 90% !important;
    
-
+       
+    
  }
 
  .subscriptionConfirm ul {
     width: 80% !important;
    
 }
+
 
 }
 
@@ -333,5 +343,16 @@ select option{
     .subscriptionConfirm ul {
         width: 100% !important;
        
+    }
+}
+
+@media(max-width: 1164px){
+    .subscriptionConfirm ul {
+       font-size: 16px !important;
+   
+       
+    }
+    .card-body {
+        margin-bottom: -10px;
     }
 }
