--- a/css/footer.css
+++ b/css/footer.css
@@ -5,6 +5,13 @@
     color: white;
     font-size: 16px;
     font-family: 'Poppins', sans-serif;
+  
+    display: block;
+    align-items: center;
+   
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 .footer p {
     margin-top: 18px;
