--- a/css/navbar.css
+++ b/css/navbar.css
@@ -12,7 +12,18 @@
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
     margin-left: 35px;
+    background: none;
+    outline: none;
+    border: none;
 }
+
+.nav-link:hover, .nav-link:focus, .nav-link:active, .nav-link:visited, .nav-link:link {
+    background: none !important;
+    outline: none !important;
+    border: none !important;
+}
+
+
 .nav-link:hover{
     
     transform: scale(1.03);
