--- a/css/reservationDetails.css
+++ b/css/reservationDetails.css
@@ -19,33 +19,112 @@
     color: #4D5560 !important;
 }
 
-.fa-calendar-alt, .fa-clock, .fa-hourglass-half {
+.fa-calendar-alt, .fa-clock, .fa-hourglass-half, .fa-calendar-check, .fa-money-bill-alt {
     color: #E3B038;
      font-size: 25px;
-   
      margin-right: 5px;
+
 
  }
 
- .card-body input[type=date], .card-body input[type=time]{
+ .fullDay {
+     margin-left: 8%;
+     margin-top: 25px;
+ }
+
+.promo {
+    margin-left: 6%;
+    margin-top: 13px !important;
+}
+
+ .custom-switch {
+    padding-left: 2.25rem;
+    padding-bottom: 1rem; 
+    margin-top: 26px;
+    margin-left: 30px;
+  
+  }
+
+ 
+  
+  .custom-control-label { 
+    padding-top: 0.5rem;
+    padding-left: 2rem;
+    padding-bottom: 0.1rem;
+  }
+
+ 
+  
+  .custom-switch .custom-control-label::before {
+    left: -2.25rem;
+    height: 0.8rem;
+    width: 2rem;  
+    pointer-events: all;
+    border-radius: 1rem;
+    border: none;
+    background-color: #DEE2E6;
+  
+  }
+
+  .custom-control-input:focus ~ .custom-control-label::before {
+    box-shadow:none !important;
+}
+  
+  .custom-switch .custom-control-label::after {
+    top: calc(-0.3rem + 2px);
+     
+    left: calc(-3.25rem + 2px);
+    width: calc(1.8rem - 4px);  
+    height: calc(1.8rem - 4px);  
+    background-color: #E3B038;
+   
+    border-radius: 2rem; 
+    transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-transform 0.15s ease-in-out;
+    transition: transform 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    transition: transform 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-transform 0.15s ease-in-out;
+  }
+  @media (prefers-reduced-motion: reduce) {
+    .custom-switch .custom-control-label::after {
+      transition: none;
+      
+    }
+  }
+
+  .custom-switch .custom-control-input:checked ~ .custom-control-label::before {
+    background-color: rgb(218, 160, 26);
+   
+    }
+  
+  .custom-switch .custom-control-input:checked ~ .custom-control-label::after {
+    background-color: #E3B038;
+    -webkit-transform: translateX(2rem); 
+    transform: translateX(2rem); 
+  }
+
+ .card-body input[type=date], .card-body input[type=time], .card-body input[type=text]{
      border-radius: 30px;
-     border: 1px solid #A8A8A8;
+     border: 1px solid rgb(216, 216, 216);
      padding: 7px 15px;
      margin-bottom: 15px;
+     color: #222831 !important;
  }
 
  .card-body span{
     margin-right: 5px;
     font-size: 18px;
     color: #222831;
+    
 }
 
 .range{
     width: 63%;
-    margin-top: 7px;
+    margin-top: 6px;
 }
 
-.numberOfHours {
+.numberOfHoursSm{
+    display: none;
+}
+.numberOfHoursLg {
     margin-top: 4px;
 }
 
@@ -53,7 +132,7 @@
     margin-top: 10px;
 }
 .durationImg {
-    margin-right: 15px;
+    margin-right: 2.5%;
 }
 
 
@@ -161,6 +240,11 @@
         margin-top: 10px;
     }
     
+    .reservationHeader p {
+    
+        margin-right: 0px;
+       
+    }
 }
 
 @media(max-width: 1587px){
@@ -175,6 +259,11 @@
       
      }
 
+     .card-img-top{
+        height: 58%;
+        
+     }
+
    
 }
 
@@ -184,4 +273,153 @@
         font-size: 15px;
        
     }
+}
+
+@media(max-width: 1160px){
+    .card:nth-of-type(1){
+        width: 31% !important;
+    }
+}
+@media(max-width: 1220px){
+    .fullDayCenter {
+        width: 80%;
+        margin: 0 auto;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .fullDay {
+        margin-left: 3%;
+        margin-top: 20px;
+    }
+
+    .promo{
+        width: 80%;
+        margin: 0 auto;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .promo {
+        margin-left: 8%;
+    }
+
+}
+
+@media(max-width: 888px){
+
+    .card:nth-of-type(1){
+        width: 50% !important;
+    }
+
+    .card:nth-of-type(2){
+       
+        width: 95% !important;
+      
+     }
+
+     .promo {
+        margin-left: 20%;
+        margin-top: 15px;
+    }
+
+}
+
+@media(max-width: 720px){
+    .card:nth-of-type(1){
+        width: 60% !important;
+    }
+    .promo {
+        margin-left: 16%;
+        
+    }
+    
+}
+
+@media(max-width: 646px){
+    .card:nth-of-type(1){
+        width: 60% !important;
+    }
+
+
+}
+
+@media(max-width: 634px){
+    .promo {
+        margin-left: 10%;
+        
+    }
+}
+
+@media(max-width: 530px){
+    .card:nth-of-type(1){
+        width: 70% !important;
+    }
+
+}
+
+@media(max-width: 430px){
+    .card:nth-of-type(1){
+        width: 80% !important;
+    }
+
+}
+
+@media(max-width: 395px){
+    .promo {
+        margin-left: 6%;
+        
+    }
+}
+
+@media(max-width: 360px){
+    .card:nth-of-type(1){
+        width: 91% !important;
+    }
+
+}
+@media(max-width: 469px){
+    .numberOfHoursLg{
+       display: none;
+    }
+    .numberOfHoursSm{
+        display: unset;
+     }
+     .range{
+         width: 80%;
+     }
+
+}
+
+@media(max-width: 382px){
+  
+    .custom-switch {
+       text-align: center;
+        margin-top: 26px;
+        margin-left: 5px;
+      
+      }
+
+      .card:nth-of-type(2){
+       
+        width: 99% !important;
+      
+     }
+}
+
+@media(max-width: 333px){
+   .custom-switch{
+           width: 80%;
+           margin: 10px;
+           margin-left: 40%;
+   }
+
+   .promo {
+    margin-left: 10%;
+      margin-top: 0px !important;
+}
+.promo input {
+    width: 95%;
+}
+
 }
