--- a/css/navbar/signInLinks.css
+++ b/css/navbar/signInLinks.css
@@ -16,9 +16,7 @@
     outline: none;
     border: none;
 }
-.minSize {
-    display: none;
-}
+
 .nav-link:hover, .nav-link:focus, .nav-link:active, .nav-link:visited, .nav-link:link {
     background: none !important;
     outline: none !important;
@@ -44,14 +42,7 @@
     font-size: 25px !important;
 }
 
-.fa-user, .fa-sign-out-alt {
-    padding-right: 10px !important;
-    color: #E3B038;
-}
 
-.dropdown-item {
-    font-weight: 500;
-}
 
 @media (max-width: 520px){
     .navbar-brand{
@@ -69,14 +60,34 @@
     .navbar-nav{
         margin-top: 15px;
     }
+    .nav-link:hover{
+        transform: none !important;
+    }
+}
+
+
+/* CSS ADD FOR SIGN IN LINKS */
+
+.minSize {
+    display: none;
+}
+
+.fa-user, .fa-sign-out-alt {
+    padding-right: 10px !important;
+    color: #E3B038;
+}
+
+.dropdown-item {
+    font-weight: 500;
+}
+
+@media (max-width: 991px){
+   
     .minSize {
         display: unset;
     }
     .dropdown {
         display: none;
-    }
-    .nav-link:hover{
-        transform: none !important;
     }
 
 }
