--- a/AR/style/profile.css
+++ b/AR/style/profile.css
@@ -1,3 +1,126 @@
+html, body{
+    background-color: #F3F3F7 !important;
+}
+
+
+/* Navbar */
+
+.navbar{
+    background-color: #3B3B3B;
+    padding: 15px 0px !important;
+}
+.navbar-brand{
+    margin-right: 50px !important;
+}
+.nav-link {
+    color: white;
+  
+    font-size: 18px;
+    margin-left: 35px;
+    background: none;
+    outline: none;
+    border: none;
+}
+
+.nav-link:hover, .nav-link:focus, .nav-link:active, .nav-link:visited, .nav-link:link {
+    background: none !important;
+    outline: none !important;
+    border: none !important;
+}
+
+.tooggleBtnSmall , .logoImgSmall {
+    display: none;
+}
+
+
+.nav-link:hover{
+    
+    transform: scale(1.03);
+}
+.navbar-nav {
+    margin-left: 20px;
+}
+.nav-link:hover{
+    text-decoration: none;
+    color: white;
+}
+.navbar-toggler{
+    color: white !important;
+    outline: none !important;
+    margin-right: 20px !important;
+    font-size: 25px !important;
+}
+
+
+
+@media (max-width: 520px){
+    
+    .nav-link {
+            margin-right: 18px !important;
+    }
+}
+@media (max-width: 991px){
+    .nav-link {
+        margin-top: 5px;
+        margin-left: 0px;
+        margin-right: 50px;
+        text-align: right !important;
+    }
+    .navbar-nav{
+        margin-top: 15px;
+    }
+    .nav-link:hover{
+        transform: none !important;
+    }
+    .logoImgLarge, .logoImgLarge{
+        display: none;
+    }
+    .tooggleBtnSmall , .logoImgSmall {
+        display: initial;
+    }
+}
+
+@media (max-width: 520px){
+    .navbar-brand{
+        margin-right: 13px !important;
+    }
+    .navbar-toggler{
+        margin-left: 7px !important;
+    }
+
+}
+
+
+/* CSS ADD FOR SIGN IN LINKS */
+
+.minSize {
+    display: none;
+}
+
+.fa-user, .fa-sign-out-alt {
+    padding-left: 10px !important;
+    color: #E3B038;
+    
+}
+
+.dropdown-item {
+    font-weight: 500;
+    text-align: right !important;
+}
+
+@media (max-width: 991px){
+   
+    .minSize {
+        display: unset;
+    }
+    .dropdown {
+        display: none;
+    }
+
+}
+
+
+
 /* Profile Informations */
 
 
@@ -10,6 +133,10 @@
     box-shadow: 0 20px 20px rgba(0,0,0,.03);
     width: 100%;
     border-radius: 10px;
+}
+.dateExpires {
+    text-align: right;
+    margin-right: 2px;
 }
 
 .userImg {
@@ -302,3 +429,57 @@ th {
     }
 }
 
+/* footer */
+
+#footer{
+    margin-top: 38px !important;
+    color: white;
+    font-size: 16px;
+    display: block;
+    align-items: center;
+   
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+.footer p {
+    margin-top: 18px;
+}
+
+.pull-right a i {
+    margin-left: 15px;
+    color: white;
+
+}
+.smallDeviceFooter {
+    display: none;
+}
+.pull-right {
+    margin-left: 3%;
+}
+
+#footer p i {
+    transition: 0.4s;
+    cursor: pointer;
+}
+#footer p i:hover {
+    transform: scale(1.3);
+
+}
+.pull-left {
+    margin-right: 3%;
+}
+
+@media(max-width:458px){
+    .footer {
+        text-align: center !important;
+        justify-content: center !important;
+    }
+    .smallDeviceFooter {
+        display: initial;
+    }
+
+    .largeDeviceFooter{
+        display: none;
+    }
+}
